# kdeaccessibility

./: Makefile  README.md  kdeaccessibility-4.3.4-bz#587897.patch  kdeaccessibility.spec
src/: CMakeLists.txt  Mainpage.dox
src/ColorSchemes/: CMakeLists.txt
src/IconThemes/: CMakeLists.txt
src/IconThemes/mono/: index.theme
src/cmake/modules/: FindKttsmodule.cmake
src/doc/: CMakeLists.txt
src/doc/kmag/: index.cache.bz2
src/doc/kmousetool/: index.cache.bz2
src/doc/kmouth/: index.cache.bz2
src/doc/kttsd/: index.cache.bz2
src/kmouth/: optionsdialog.h
src/kmouth/wordcompletion/: dictionarycreationwizard.h  wordcompletionwidget.h  wordlist.cpp  wordlist.h
src/ksayit/: CMakeLists.txt  Doxyfile
src/ksayit/Freeverb_plugin/: CMakeLists.txt  freeverb_setup.ui  freeverbsetupimpl.cpp  freeverbsetupimpl.h  ksayitfreeverblib.cpp  ksayitfreeverblib.h
src/ksayit/KTTSD_Lib/: CMakeLists.txt  KTTSDlibSetup.ui  kttsdlib.cpp  kttsdlib.h  kttsdlibtalker2.cpp  kttsdlibtalker2.h
src/ksayit/src/: CMakeLists.txt  ContextMenus.xml  DocTreeView.ui  DocTreeView.ui.h  KSayItView.ui  Messages.sh  Types.h  contextmenuhandler.cpp  contextmenuhandler.h  docbookclasses.cpp  docbookclasses.h  doctreeviewimpl.cpp  doctreeviewimpl.h  effectstack.cpp  fx_setup.ui  fxpluginhandler.cpp  fxpluginhandler.h  fxsetupimpl.cpp  fxsetupimpl.h  ksayit.cpp  ksayit.desktop  ksayit.h  ksayit_fxplugin.h  ksayit_ttsplugin.h  ksayitbookmarkhandler.cpp  ksayitbookmarkhandler.h  ksayitsystemtray.cpp  ksayitsystemtray.h  ksayitui.rc  ksayitviewimpl.cpp  ksayitviewimpl.h  main.cpp  parasaxparser.cpp  parasaxparser.h  saxhandler.cpp  saxhandler.h  version.h  voicesetupdlg.cpp  voicesetupdlg.h
